--- a/CeylonWellness.Web/appsettings.json
+++ b/CeylonWellness.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-HV7D9HD;Initial Catalog=CeylonWellnes;Integrated Security=True;Trust Server Certificate=True"
+  }
 }
