--- a/CeylonWellness.Web/appsettings.json
+++ b/CeylonWellness.Web/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-HV7D9HD;Initial Catalog=CeylonWellnes;Integrated Security=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=DESKTOP-HV7D9HD;Initial Catalog=CeylonWellnes;Integrated Security=True;Trust Server Certificate=True",
+    "AppDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CeylonWellness.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
