--- a/CeylonWellness.Web/appsettings.json
+++ b/CeylonWellness.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CeylonWellness.Web-d60a2ddd-2001-498e-888a-4016ccb0f79b;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=DESKTOP-HV7D9HD;Initial Catalog=CeylonWellnes;Integrated Security=True;Trust Server Certificate=True"
   },
   "Logging": {
     "LogLevel": {
