--- a/CeylonWellness.Web/appsettings.json
+++ b/CeylonWellness.Web/appsettings.json
@@ -1,12 +1,12 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-HV7D9HD;Initial Catalog=CeylonWellnes;Integrated Security=True;Trust Server Certificate=True"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-HV7D9HD;Initial Catalog=CeylonWellnes;Integrated Security=True;Trust Server Certificate=True"
+  }
 }
