--- a/CeylonWellness.Repositories/CeylonWellness.Repositories.csproj
+++ b/CeylonWellness.Repositories/CeylonWellness.Repositories.csproj
@@ -8,7 +8,10 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\" />
-    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.4" />
   </ItemGroup>
 
 </Project>
