--- a/CeylonWellness.Web/CeylonWellness.Web.csproj
+++ b/CeylonWellness.Web/CeylonWellness.Web.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.3">
       <PrivateAssets>all</PrivateAssets>
@@ -22,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CeylonWellness.Domain\CeylonWellness.Domain.csproj" />
+    <ProjectReference Include="..\CeylonWellness.Repositories\CeylonWellness.Repositories.csproj" />
   </ItemGroup>
 
   <ItemGroup>
