--- a/CeylonWellness.Repositories/CeylonWellness.Repositories.csproj
+++ b/CeylonWellness.Repositories/CeylonWellness.Repositories.csproj
@@ -8,10 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.4" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
 
 </Project>
