--- a/CeylonWellness.Web/wwwroot/manifest.json
+++ b/CeylonWellness.Web/wwwroot/manifest.json
@@ -1,6 +1,6 @@
 ﻿{
   "name": "Ceylon Wellness",
-  "short_name": "CW",
+  "short_name": "Ceylon Wellness",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
