--- a/CeylonWellness.Domain/CeylonWellness.Domain.csproj
+++ b/CeylonWellness.Domain/CeylonWellness.Domain.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Sanity.Linq" Version="1.7.1" />
   </ItemGroup>
 
 </Project>
